<resources>
    <string name="app_name">MyAppKotlin</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_my_register_page">MyRegisterPage</string>
    <string name="sign_up">Sign Up</string>
    <string name="register"><u>Register</u></string>
    <string name="re_password">Re-password</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="main_menu">MainMenu</string>
    <string name="title_activity_new_main_menu">newMainMenu</string>

</resources>