<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_background"
    tools:context=".Register"
    >
    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin ="10dp"
        android:layout_marginTop="20dp"
        app:cardElevation="20dp"
        app:cardCornerRadius="26dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >

            <TextView
                android:id="@+id/signUpTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/menu_bottom"
                android:textSize="30sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="20sp"
                android:hint="@string/email"
                android:background="@drawable/rounded_corner"
                android:textColorHint="@color/menu_bottom"
                android:textSize="16sp"
                />
            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="20sp"
                android:hint="@string/password"
                android:background="@drawable/rounded_corner"
                android:textColorHint="@color/menu_bottom"
                android:textSize="16sp"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/re_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="20sp"
                android:hint="@string/re_password"
                android:background="@drawable/rounded_corner"
                android:textColorHint="@color/menu_bottom"
                android:textSize="16sp"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:gravity="center"
                android:backgroundTint="#FF9748"
                android:padding="12sp"
                android:text="Register"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/clickable_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "Already Registered? Login !"
                android:layout_gravity="center"
                android:padding="14dp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onTextClicked" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>