<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:padding="16dp"
    android:rotationX="0"
    android:rotationY="0"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:rotationX="0">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/baseline_account_box_24"
        />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/email"
            android:inputType="text"
            android:padding="18dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
        />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="18dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
        />

        <Button

            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:padding="18dp"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            android:textColor="#4EC8FF"
            android:textSize="16sp"
        />


        <TextView
            android:id="@+id/clickable_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "or Register"
            android:padding="14dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:clickable="true"
            android:onClick="onTextClicked"
            android:focusable="true" />



    </LinearLayout>

</RelativeLayout>